redesignedoj/files_usersubmissions/28/submission.txt
7_BUILDROADS_code.cpp:1:1: error: ‘stdc’ does not name a type
    1 | stdc++.h>
      | ^~~~
